--- a/roles/falcon_uninstall/tasks/uninstall.yml
+++ b/roles/falcon_uninstall/tasks/uninstall.yml
@@ -21,7 +21,9 @@
     - name: CrowdStrike Falcon | Stopping Falcon Sensor (macOS)
       ansible.builtin.command: "launchctl stop com.crowdstrike.falcond"
       when: falcon_already_installed.stat.exists
+      # noqa no-changed-when
 
     - name: CrowdStrike Falcon | Uninstalling Falcon Sensor (macOS)
       ansible.builtin.command: "/Applications/Falcon.app/Contents/Resources/falconctl uninstall"
       when: falcon_already_installed.stat.exists
+      # noqa no-changed-when
