--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -154,3 +154,17 @@ releases:
     - 3.2.28.yaml
     - minor_changes.yaml
     release_date: '2023-02-16'
+  3.2.29:
+    changes:
+      minor_changes:
+      - falcon_configure, falcon_install - Extract authentication logic to be more
+        OS specific (https://github.com/CrowdStrike/ansible_collection_falcon/pull/309)
+      release_summary: '| Release Date: 2023-03-01
+
+        | `Release Notes: <https://github.com/CrowdStrike/ansible_collection_falcon/releases/tag/3.2.29>`__
+
+        '
+    fragments:
+    - 3.2.29.yaml
+    - minor_changes.yml
+    release_date: '2023-03-01'
