--- a/roles/falcon_install/tasks/api.yml
+++ b/roles/falcon_install/tasks/api.yml
@@ -5,11 +5,11 @@
     - falcon_sensor_update_policy_name
     - falcon_sensor_update_policy_platform == 'Linux'
   block:
-    - name: "CrowdStrike Falcon | Build Sensor Update Policy API Query"
+    - name: "CrowdStrike Falcon | Build Sensor Update Policy API Query (Linux)"
       ansible.builtin.set_fact:
         falcon_sensor_update_policy_query: "{{ 'platform_name:\"' + falcon_sensor_update_policy_platform + '\"+name.raw:\"' + falcon_sensor_update_policy_name + '\"' }}"
 
-    - name: "CrowdStrike Falcon | Search for Sensor Update Policy"
+    - name: "CrowdStrike Falcon | Search for Sensor Update Policy (Linux)"
       ansible.builtin.uri:
         url: "https://{{ falcon_cloud }}/policy/combined/sensor-update/v2?filter={{ falcon_sensor_update_policy_query | urlencode }}"
         method: GET
@@ -26,11 +26,11 @@
     - falcon_sensor_update_policy_name
     - falcon_sensor_update_policy_platform == 'Mac'
   block:
-    - name: "CrowdStrike Falcon | Build Sensor Update Policy API Query"
+    - name: "CrowdStrike Falcon | Build Sensor Update Policy API Query (MacOS)"
       ansible.builtin.set_fact:
         falcon_sensor_update_policy_query: "{{ 'platform_name:\"' + falcon_sensor_update_policy_platform + '\"+name.raw:\"' + falcon_sensor_update_policy_name + '\"' }}"
 
-    - name: "CrowdStrike Falcon | Search for Sensor Update Policy"
+    - name: "CrowdStrike Falcon | Search for Sensor Update Policy (MacOS)"
       ansible.builtin.uri:
         url: "https://{{ falcon_cloud }}/policy/combined/sensor-update/v2?filter={{ falcon_sensor_update_policy_query | urlencode }}"
         method: GET
@@ -73,15 +73,30 @@
         falcon_sensor_update_policy_package_version: "{{ falcon_sensor_update_policy_info.json.resources[0].settings.variants[0].sensor_version }}"
       when: ansible_facts['machine'] == "aarch64"
 
-    - name: "CrowdStrike Falcon | Build API Sensor Query based on Sensor Update Policy"
+    - name: "CrowdStrike Falcon | Build API Sensor Query based on Sensor Update Policy (Linux)"
       ansible.builtin.set_fact:
         falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"+version:\"' + falcon_sensor_update_policy_package_version + falcon_os_arch }}"
+      when: ansible_facts['system'] == "Linux"
 
-- name: "CrowdStrike Falcon | Build API Sensor Query"
-  ansible.builtin.set_fact:
-    falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + falcon_os_arch + '+version:\"' + falcon_sensor_version + '\"'
-      if (falcon_sensor_version) else 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + falcon_os_arch }}"
+    - name: "CrowdStrike Falcon | Build API Sensor Query based on Sensor Update Policy (MacOS)"
+      ansible.builtin.set_fact:
+        falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"+version:\"' + falcon_sensor_update_policy_package_version + '\"' }}"
+      when: ansible_facts['system'] == "Darwin"
+
+- name: "Build API Sensor Block"
   when: not falcon_sensor_update_policy_name
+  block:
+    - name: "CrowdStrike Falcon | Build API Sensor Query (Linux)"
+      ansible.builtin.set_fact:
+        falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + falcon_os_arch + '+version:\"' + falcon_sensor_version + '\"'
+          if (falcon_sensor_version) else 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + falcon_os_arch }}"
+      when: ansible_facts['system'] == "Linux"
+
+    - name: "CrowdStrike Falcon | Build API Sensor Query (MacOS)"
+      ansible.builtin.set_fact:
+        falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"+version:\"' + falcon_sensor_version + '\"'
+          if (falcon_sensor_version) else 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"' }}"
+      when: ansible_facts['system'] == "Darwin"
 
 - name: CrowdStrike Falcon | Get list of filtered Falcon sensors
   ansible.builtin.uri:
