Fix lint issue around mac handler

--- a/roles/falcon_configure/tasks/configure.yml
+++ b/roles/falcon_configure/tasks/configure.yml
@@ -108,3 +108,4 @@
       when:
         - falconctl_mac_tags_set.changed or falconctl_mac_tags_clear.changed
       # noqa no-changed-when
+      # noqa no-handler
