--- a/.github/workflows/falcon_install.yml
+++ b/.github/workflows/falcon_install.yml
@@ -5,13 +5,13 @@ on:
   push:
     paths:
       - 'roles/falcon_install/**'
-      - 'molecule/falcon_install/**'
+      - 'molecule/falcon_install**'
       - '.github/workflows/falcon_install.yml'
   pull_request_target:
     types: [ labeled ]
     paths:
       - 'roles/falcon_install/**'
-      - 'molecule/falcon_install/**'
+      - 'molecule/falcon_install**'
       - '.github/workflows/falcon_install.yml'
 jobs:
   molecule:
@@ -37,6 +37,7 @@ jobs:
         collection_role:
           - falcon_install
           - falcon_install_policy
+          - falcon_install_allow_downgrade
     steps:
       - name: Check out code
         uses: actions/checkout@v3
