--- a/.github/workflows/falcon_uninstall.yml
+++ b/.github/workflows/falcon_uninstall.yml
@@ -54,9 +54,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt install apt-transport-https ca-certificates curl software-properties-common
+          sudo apt install apt-transport-https ca-certificates curl software-properties-common libssl-dev
           python -m pip install --upgrade pip
-          pip install molecule[docker,lint] ansible yamllint ansible-lint
+          pip install molecule "molecule-plugins[docker]" ansible ansible-core ansible-lint
 
       - name: Build/Install the collection
         uses: nick-fields/retry@v2
