--- a/.github/workflows/win_falcon_install.yml
+++ b/.github/workflows/win_falcon_install.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install molecule[lint] ansible yamllint ansible-lint python-vagrant molecule-vagrant "pywinrm>=0.3.0"
+          pip install molecule molecule-plugins ansible ansible-core ansible-lint pywinrm python-vagrant
 
       - name: Build/Install the collection
         uses: nick-fields/retry@v2
