--- a/.github/workflows/falcon_uninstall.yml
+++ b/.github/workflows/falcon_uninstall.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           sudo apt install apt-transport-https ca-certificates curl software-properties-common libssl-dev
           python -m pip install --upgrade pip
-          pip install molecule "molecule-plugins[docker]" ansible ansible-core ansible-lint
+          pip install molecule "molecule-plugins[docker]" ansible ansible-core ansible-lint "requests<2.30.0"
 
       - name: Build/Install the collection
         uses: nick-fields/retry@v2
