Adds downgrade ability when zypper is used

--- a/roles/falcon_install/tasks/install.yml
+++ b/roles/falcon_install/tasks/install.yml
@@ -37,6 +37,7 @@
     deb: "{{ falcon_sensor_pkg if (ansible_facts['pkg_mgr'] in dpkg_packagers) else omit }}"
     name: "{{ falcon_sensor_pkg if (ansible_facts['pkg_mgr'] in rpm_packagers) else omit }}"
     allow_downgrade: "{{ falcon_allow_downgrade if (ansible_facts['pkg_mgr'] != 'zypper') else omit }}"
+    oldpackage: "{{ falcon_allow_downgrade if (ansible_facts['pkg_mgr'] == 'zypper') else omit }}"
     state: present
   when:
     - ansible_facts['pkg_mgr'] in linux_packagers
