--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -233,3 +233,16 @@ releases:
     - 3.2.33.yml
     - downgrade.yml
     release_date: '2023-04-24'
+  3.2.34:
+    changes:
+      bugfixes:
+      - falcon_install - fix bug with zypper downgrade (https://github.com/CrowdStrike/ansible_collection_falcon/pull/344)
+      release_summary: '| Release Date: 2023-05-10
+
+        | `Release Notes: <https://github.com/CrowdStrike/ansible_collection_falcon/releases/tag/3.2.34>`__
+
+        '
+    fragments:
+    - 3.2.34.yml
+    - zypper-downgrade.yml
+    release_date: '2023-05-10'
