--- a/molecule/falcon_install/molecule.yml
+++ b/molecule/falcon_install/molecule.yml
@@ -13,11 +13,13 @@ platforms:
     instance_type: "${MOLECULE_INSTANCE_TYPE:-t2.micro}"
     region: "${MOLECULE_REGION:-us-west-2}"
     vpc_subnet_id: "${MOLECULE_VPC_SUBNET_ID}"
+    security_group_restrict_cidr_ip: true
 provisioner:
   name: ansible
   playbooks:
     create: ../shared/playbooks/create.yml
     destroy: ../shared/playbooks/destroy.yml
+    verify: ../shared/playbooks/verify.yml
 verifier:
   name: ansible
 scenario:
