--- a/.github/workflows/win_falcon_configure.yml
+++ b/.github/workflows/win_falcon_configure.yml
@@ -20,7 +20,7 @@ jobs:
       github.event_name == 'schedule' ||
       (github.event_name == 'pull_request_target' &&
       github.event.label.name == 'ok-to-test')
-    runs-on: macos-12
+    runs-on: ubuntu-latest
     env:
       PY_COLORS: 1
       ANSIBLE_FORCE_COLOR: 1
@@ -28,14 +28,22 @@ jobs:
       FALCON_CLIENT_SECRET: ${{ secrets.FALCON_CLIENT_SECRET }}
       FALCON_CID: ${{ secrets.FALCON_CID }}
       FALCON_PROV_TOKEN: ${{ secrets.FALCON_PROV_TOKEN }}
-      OBJC_DISABLE_INITIALIZE_FORK_SAFETY: YES
+      AWS_REGION: "us-west-2"
+      MOLECULE_VPC_SUBNET_ID: ${{ secrets.MOLECULE_VPC_SUBNET_ID }}
+    permissions:
+      contents: read
+      id-token: write
     strategy:
       fail-fast: false
       matrix:
-        molecule_distro:
-          - { "distro":"WindowsServer2019" }
+        molecule:
+          - distro: WindowsServer2022
+            image_owner: 801119661308
+            image_arch: x86_64
+            image_name: Windows_Server-2022-English-Full-Base-*
+            instance_type: t3a.medium
         collection_role:
-          - win_falcon_configure
+            - win_falcon_configure
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -47,6 +55,13 @@ jobs:
           ref: ${{github.event.pull_request.head.sha}}
         if: github.event_name == 'pull_request_target'
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::861305338103:role/github-actions-oidc-role
+          role-session-name: github-actions-molecule-ansible
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -54,8 +69,9 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt install apt-transport-https ca-certificates curl software-properties-common libssl-dev
           python -m pip install --upgrade pip
-          pip install molecule molecule-plugins ansible ansible-core ansible-lint pywinrm python-vagrant
+          pip install molecule "molecule-plugins[ec2]" ansible ansible-core ansible-lint boto3 botocore pywinrm
 
       - name: Build/Install the collection
         uses: nick-fields/retry@v2
@@ -76,5 +92,10 @@ jobs:
           command: >-
             molecule --version &&
             ansible --version &&
-            MOLECULE_DISTRO=${{ matrix.molecule_distro.distro }}
+            MOLECULE_INSTANCE_NAME=${{ matrix.molecule.distro }}-${{ matrix.collection_role }}
+            MOLECULE_IMAGE_OWNER=${{ matrix.molecule.image_owner }}
+            MOLECULE_IMAGE_ARCH=${{ matrix.molecule.image_arch }}
+            MOLECULE_IMAGE_NAME=${{ matrix.molecule.image_name }}
+            MOLECULE_INSTANCE_TYPE=${{ matrix.molecule.instance_type }}
+            MOLECULE_REGION=${{ env.AWS_REGION}}
             molecule --debug test -s ${{ matrix.collection_role }} -- -v
