--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -119,6 +119,13 @@ jobs:
 
       - name: Run role tests
         uses: nick-fields/retry@v2
+        env:
+          MOLECULE_INSTANCE_NAME: ${{ matrix.molecule.distro }}-${{ matrix.collection_role }}
+          MOLECULE_IMAGE_OWNER: ${{ matrix.molecule.image_owner }}
+          MOLECULE_IMAGE_ARCH: ${{ matrix.molecule.image_arch }}
+          MOLECULE_IMAGE_NAME: ${{ matrix.molecule.image_name }}
+          MOLECULE_INSTANCE_TYPE: ${{ matrix.molecule.instance_type }}
+          MOLECULE_REGION: ${{ env.AWS_REGION}}
         with:
           timeout_minutes: 15
           max_attempts: 1
@@ -126,10 +133,4 @@ jobs:
           command: >-
             molecule --version &&
             ansible --version &&
-            MOLECULE_INSTANCE_NAME=${{ matrix.molecule.distro }}-${{ matrix.collection_role }}
-            MOLECULE_IMAGE_OWNER=${{ matrix.molecule.image_owner }}
-            MOLECULE_IMAGE_ARCH=${{ matrix.molecule.image_arch }}
-            MOLECULE_IMAGE_NAME=${{ matrix.molecule.image_name }}
-            MOLECULE_INSTANCE_TYPE=${{ matrix.molecule.instance_type }}
-            MOLECULE_REGION=${{ env.AWS_REGION}}
             molecule --debug test -s ${{ matrix.collection_role }} -- -v -e "falcon_skip_kernel_compat_check=yes"
