--- a/molecule/falcon_configure/molecule.yml
+++ b/molecule/falcon_configure/molecule.yml
@@ -13,6 +13,7 @@ platforms:
     instance_type: "${MOLECULE_INSTANCE_TYPE:-t2.micro}"
     region: "${MOLECULE_REGION:-us-west-2}"
     vpc_subnet_id: "${MOLECULE_VPC_SUBNET_ID}"
+    security_group_restrict_cidr_ip: true
 provisioner:
   name: ansible
   playbooks:
