Testing linux CI jobs with recent changes

--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -20,6 +20,7 @@ jobs:
       github.event_name == 'schedule' ||
       (github.event_name == 'pull_request_target' &&
       github.event.label.name == 'ok-to-test')
+    name: ${{ matrix.molecule.distro }}-${{ matrix.collection_role }}
     runs-on: ubuntu-latest
     env:
       PY_COLORS: 1
@@ -126,7 +127,6 @@ jobs:
           MOLECULE_IMAGE_NAME: '${{ matrix.molecule.image_name }}'
           MOLECULE_INSTANCE_TYPE: ${{ matrix.molecule.instance_type }}
           MOLECULE_REGION: ${{ env.AWS_REGION}}
-          MOLECULE_SECURITY_GROUP_RESTRICT_CIDR_IP: false
         with:
           timeout_minutes: 15
           max_attempts: 3
