--- a/.github/workflows/falcon_install.yml
+++ b/.github/workflows/falcon_install.yml
@@ -136,4 +136,4 @@ jobs:
           command: >-
             molecule --version &&
             ansible --version &&
-            molecule --debug test -s ${{ matrix.collection_role }} -- -v -e "falcon_skip_kernel_compat_check=yes"
+            molecule test -s ${{ matrix.collection_role }} -- -v -e "falcon_skip_kernel_compat_check=yes"
