--- a/.github/workflows/falcon_install.yml
+++ b/.github/workflows/falcon_install.yml
@@ -80,7 +80,7 @@ jobs:
             instance_type: t2.micro
         collection_role:
           - falcon_install
-          # - falcon_install_policy
+          - falcon_install_policy
           # - falcon_install_allow_downgrade
     steps:
       - name: Check out code
@@ -132,9 +132,9 @@ jobs:
           MOLECULE_REGION: ${{ env.AWS_REGION}}
         with:
           timeout_minutes: 15
-          max_attempts: 2
+          max_attempts: 1
           retry_on: error
           command: >-
             molecule --version &&
             ansible --version &&
-            molecule --debug test -s ${{ matrix.collection_role }} -- -v -e "falcon_skip_kernel_compat_check=yes"
+            molecule --debug test --destroy never -s ${{ matrix.collection_role }} -- -v -e "falcon_skip_kernel_compat_check=yes"
