test limit theory 6

--- a/.github/workflows/falcon_install.yml
+++ b/.github/workflows/falcon_install.yml
@@ -81,7 +81,7 @@ jobs:
         collection_role:
           - falcon_install
           - falcon_install_policy
-          # - falcon_install_allow_downgrade
+          - falcon_install_allow_downgrade
     steps:
       - name: Check out code
         uses: actions/checkout@v3
