--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -119,6 +119,7 @@ jobs:
             ansible-galaxy collection install $collection_file
 
       - name: Run role tests
+        id: molecule
         uses: nick-fields/retry@v2
         env:
           MOLECULE_INSTANCE_NAME: ${{ matrix.molecule.distro }}-${{ matrix.collection_role }}
@@ -154,3 +155,9 @@ jobs:
             molecule --version &&
             ansible --version &&
             molecule --debug destroy -s ${{ matrix.collection_role }}
+
+      - name: Check molecule status
+        if: ${{ steps.molecule.outcome }} != 'success'
+        run: |
+          echo "A failure occurred during molecule testing."
+          exit 1
