Test reporting correct status based on molecule test 2

--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -119,7 +119,7 @@ jobs:
             ansible-galaxy collection install $collection_file
 
       - name: Run role tests
-        id: molecule
+        id: molecule-role-test
         uses: nick-fields/retry@v2
         env:
           MOLECULE_INSTANCE_NAME: ${{ matrix.molecule.distro }}-${{ matrix.collection_role }}
@@ -157,7 +157,5 @@ jobs:
             molecule --debug destroy -s ${{ matrix.collection_role }}
 
       - name: Check molecule status
-        if: ${{ steps.molecule.outcome }} != 'success'
         run: |
-          echo "A failure occurred during molecule testing."
-          exit 1
+          echo "Molecule role test status: ${{ steps.molecule-role-test.outcome }}"
