--- a/.github/workflows/falcon_configure.yml
+++ b/.github/workflows/falcon_configure.yml
@@ -38,7 +38,7 @@ jobs:
       matrix:
         molecule:
           - distro: ubuntu-20.04
-            image_owner: '099720109477'
+            image_owner: '099720109477x'
             image_arch: x86_64
             image_name: ubuntu/images/hvm-ssd/ubuntu-focal-20.04*
             instance_type: t2.micro
@@ -47,36 +47,36 @@ jobs:
             image_arch: x86_64
             image_name: ubuntu/images/hvm-ssd/ubuntu-jammy-22.04*
             instance_type: t2.micro
-          - distro: sles-15-sp4
-            image_owner: '013907871322'
-            image_arch: x86_64
-            image_name: suse-sles-15-sp4-v????????-hvm*
-            instance_type: t2.micro
-          - distro: centos-7
-            image_owner: '679593333241'
-            image_arch: x86_64
-            image_name: CentOS-7-*
-            instance_type: t2.micro
-          - distro: almalinux-8
-            image_owner: '679593333241'
-            image_arch: x86_64
-            image_name: AlmaLinux OS 8*
-            instance_type: t2.micro
-          - distro: rhel-9
-            image_owner: '309956199498'
-            image_arch: x86_64
-            image_name: RHEL-9.?.?_HVM-*
-            instance_type: t2.micro
-          - distro: rhel-9-arm
-            image_owner: '309956199498'
-            image_arch: arm64
-            image_name: RHEL-9.?.?_HVM-*
-            instance_type: t4g.micro
-          - distro: debian-11
-            image_owner: '136693071363'
-            image_arch: x86_64
-            image_name: debian-11-amd64-*
-            instance_type: t2.micro
+          # - distro: sles-15-sp4
+          #   image_owner: '013907871322'
+          #   image_arch: x86_64
+          #   image_name: suse-sles-15-sp4-v????????-hvm*
+          #   instance_type: t2.micro
+          # - distro: centos-7
+          #   image_owner: '679593333241'
+          #   image_arch: x86_64
+          #   image_name: CentOS-7-*
+          #   instance_type: t2.micro
+          # - distro: almalinux-8
+          #   image_owner: '679593333241'
+          #   image_arch: x86_64
+          #   image_name: AlmaLinux OS 8*
+          #   instance_type: t2.micro
+          # - distro: rhel-9
+          #   image_owner: '309956199498'
+          #   image_arch: x86_64
+          #   image_name: RHEL-9.?.?_HVM-*
+          #   instance_type: t2.micro
+          # - distro: rhel-9-arm
+          #   image_owner: '309956199498'
+          #   image_arch: arm64
+          #   image_name: RHEL-9.?.?_HVM-*
+          #   instance_type: t4g.micro
+          # - distro: debian-11
+          #   image_owner: '136693071363'
+          #   image_arch: x86_64
+          #   image_name: debian-11-amd64-*
+          #   instance_type: t2.micro
         collection_role:
           - falcon_configure
     steps:
