--- a/.github/workflows/falcon_install.yml
+++ b/.github/workflows/falcon_install.yml
@@ -121,6 +121,7 @@ jobs:
             ansible-galaxy collection install $collection_file
 
       - name: Run role tests
+        id: molecule-role-test
         uses: nick-fields/retry@v2
         env:
           MOLECULE_INSTANCE_NAME: ${{ matrix.molecule.distro }}-${{ matrix.collection_role }}
@@ -156,3 +157,9 @@ jobs:
             molecule --version &&
             ansible --version &&
             molecule --debug destroy -s ${{ matrix.collection_role }}
+
+      - name: Assert molecule tests passed
+        uses: nick-fields/assert-action@v1
+        with:
+          expected: success
+          actual: ${{ steps.molecule-role-test.outcome }}
