--- a/.github/workflows/win_falcon_uninstall.yml
+++ b/.github/workflows/win_falcon_uninstall.yml
@@ -84,6 +84,7 @@ jobs:
             ansible-galaxy collection install $collection_file
 
       - name: Run role tests
+        id: molecule-role-test
         uses: nick-fields/retry@v2
         env:
           MOLECULE_INSTANCE_NAME: ${{ matrix.molecule.distro }}-${{ matrix.collection_role }}
@@ -93,7 +94,7 @@ jobs:
           MOLECULE_INSTANCE_TYPE: ${{ matrix.molecule.instance_type }}
           MOLECULE_REGION: ${{ env.AWS_REGION}}
         with:
-          timeout_minutes: 20
+          timeout_minutes: 15
           max_attempts: 3
           retry_on: error
           command: >-
@@ -119,3 +120,9 @@ jobs:
             molecule --version &&
             ansible --version &&
             molecule --debug destroy -s ${{ matrix.collection_role }}
+
+      - name: Assert molecule tests passed
+        uses: nick-fields/assert-action@v1
+        with:
+          expected: success
+          actual: ${{ steps.molecule-role-test.outcome }}
